
version 3.0.0 (??/??/????):
	General:
	* Various core components of libpurple are now GObjects (Ankit Vani).
	* Ciphers are now built from the libpurple directory.
	* Doxygen has been replaced by gtk-doc for generating documentation (Ankit
	  Vani).

	libpurple:
	* Specify a different set of encryption ciphers for TLS connections when
	  using GnuTLS. (elrond, belmyst, and Mark Doliner) (#8061)

	Pidgin:
	* Support building with the GTK+ 3.x toolkit.  When configuring the
	  build, use --with-gtk=<2|3> to determine which toolkit to use.  Using
	  either 2 or 3 will attempt to build with specifically 2.x or 3.x
	  support.  The default is 'auto', which will first look for 3.x
	  development headers and then 2.x development headers.
	* Add email notification in the docklet area. (Alexei) (#3571)
	* Add a pref to select the type messages in conversation that triggers
	  the docklet notification. (Momchil) (#12598)
	* Complete support for receiving a limited amount of history when
	  joining a room. (Kha) (#15458)
	* Fix gevolution plugin to compile with e-d-s >= 3.6, older versions are
	  not supported anymore. (Ed Catmur) (#15353)

	Finch:
	* Support the conversation-extended signal for extending the
	  conversation menu. (Howard Chu) (#14818)

	AIM and ICQ:
	* Make buddy list management code more efficient. (Oliver) (#4816)

	Bonjour:
	* Support file transfers up to ~9 EiB.

	Gadu-Gadu:
	* Possibility to require encryption. Also, using encryption when
	  available is default option now. (Tomasz Wasilczyk)
	* Show local time for incoming messages. (Tomasz Wasilczyk) (#4579)
	* Fixed password change dialog and problems with connecting to accounts
	  with non-ASCII passwords. (Tomasz Wasilczyk) (#14652)
	* Option to show links from strangers. (Tomasz Wasilczyk) (#10591)
	* Better handling of "invisible" and "chatty" statuses. (Tomasz
	  Wasilczyk) (#13836)

	MSN:
	* Fix file transfer with older Mac MSN clients.
	* Support file transfers up to ~9 EiB.